Push before the storm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,4 @@ target_link_libraries(lab_ex2 pthread)
 target_link_libraries(lab_ex3 pthread)
 
 add_executable(ftdt_yee src/ftdt_yee.cpp)
+target_link_libraries(ftdt_yee pthread)
